@@ -1,6 +1,7 @@
 2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Implemented COD mail (Ticket #1) and updated the way postage was counted so that if you mail multiple items at once, they will all have the postage counted. I also removed the 30c for postage from how QA thresholds are calculated now that they will be counted every time.
+- Added a dialog to allow the user to send COD mail without a tracking number.
 
 2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>
 
